Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectIntObjField.quorum
class Main
    Integer i
    Object o        
    action Main
        i:SetValue(5.0)
        o = cast(Object, i)
        if o:Equals(i)
            output "passed"
        end
    end
end
