Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjIntObjField.quorum
class Main
    Integer i
    Number num
    action Main
        i:SetValue(5)
        num = cast(Number, i)
    end
end